# BudgetyMcBudgetface

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: buildtest.yml  release.yml
cmake/modules/: windeployqt.cmake
src/: CMakeLists.txt  accountstab.cpp  accountstab.h  accountstab.ui  accountstatusdelegate.cpp  accountstatusdelegate.h  addaccountdialog.cpp  addaccountdialog.h  addaccountdialog.ui  addfamilymemberdialog.cpp  addfamilymemberdialog.h  addfamilymemberdialog.ui  backendresources.qrc  blankrowproxy.cpp  blankrowproxy.h  centralwidget.cpp  centralwidget.h  centralwidget.ui  decimaldelegate.cpp  decimaldelegate.h  familytab.cpp  familytab.h  familytab.ui  globals.cpp  globals.h  guimain.cpp  isodatedelegate.cpp  isodatedelegate.h  mainobject.cpp  mainobject.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  multichoicecombo.cpp  multichoicecombo.h  multiplefilterproxy.cpp  multiplefilterproxy.h  offlinesqlitetable.cpp  offlinesqlitetable.h  offlinesqlquerymodel.cpp  (+17 more)
src/resources/: filldefaultdatabase.sql
